  owners to use HTML in forum posts. (Mark)
- Added phpBB3 migration utility (Mark)
- Improved page titles (Mark)

Links Plugin
------------
- Fixed a potential XSS issue when invalid data is entered during link
  add / edit (Mark)
- Fixed issue where children categories would become orphaned if the
  parent category changed category id (Mark)

Media Gallery
-------------
- Implemented the PLG_itemSaved() API (Mark)
- Fixed issue where the default album theme was not being used on new
  albums (Mark)
- Fixed issue where the parent album's group ownership was not always
  properly inherited by new child albums (Mark)
- Added {search_album} template variable to the search output, allowing
  the album an item resides to be included in the search results display (Mark)
- Renamed the 'Graphics Package' tab in the MG admin screen to
  'Host Environment' to better reflect the real meaning of the tab (Mark)
- Added new command line interface for batch imports into Media Gallery (Mark)
- Added new option to allow media owner to edit media item (Mark)
- Added new feature to allow mediagallery.admin to edit media owner (Mark)
- Moved user preferences to user profile (Mark)
- Fixed comment handling - multi-page comments did not work and
  user could not select comment order. (Mark)

Polls
-----
- Fixed comment handling - multi-page comments did not work and
  user could not select comment order. (Mark)

StaticPages
----------
- Implemented PLG_itemSaved() API (Mark)
- Fixed comment handling - allow multi-page comments (Mark)

v1.1.4.pl4
----------
- Fixed bug where you could not use the image insert in the advanced
  editor in the mail user form (Mark)
- Fixed another XML issue with the web services routines (Mark)
- Added width:100% in submitstory_advanced.thtml template to ensure the
  WYSIWYG editor uses the full width of the page (Mark)
- Removed the maxlength for the admin password prompt (Mark)
- Ensure extra whitespace is properly removed in search strings (Mark)